fix: css alignment for facet/filter header

--- a/nerdlets/mande-nerdlet/components/action-sidebar/style.scss
+++ b/nerdlets/mande-nerdlet/components/action-sidebar/style.scss
@@ -23,7 +23,7 @@ div[class*="wnd-StackItem"].filters-container-stack-item {
   @extend .sidebar-header-base;
   box-sizing: border-box;
   padding: 0 16px;
-  height: 58px;
+  height: 62px;
   border-right: none;
   display: flex;
   align-items: center;
